# academicar

./: .env.example  .gitignore  AcademicAR_Model_Based_Licensing_Plan.html  AcademicAR_Model_Based_Licensing_Plan_EN.html  AcademicAR_Model_Based_Licensing_Plan_TR.html  CLAUDE.md  DESIGN.md  Dockerfile  MARKETING_STRATEGY.md  MVP_IMPLEMENTATION_PLAN.md  PRODUCT_GUIDE.md  PROJECT_DESCRIPTION.md  PROJECT_GUIDANCE.md  Procfile  README.md  app.py  auth.py  config.py  licensing.py  models.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  run_local_server.py  storage.py  url_helpers.py  worker.py
converters/: __init__.py  external_converter.py  stl_converter.py
services/: storage_service.py
static/css/: style.css
static/models/: demo-model.glb  model.compressed.glb
templates/: admin_dashboard.html  admin_user_detail.html  base.html  dashboard.html  demo_mitochondria_ar.html  landing.html  login.html  model_access_unavailable.html  model_edit.html  paper_detail.html  paper_new.html  paper_public.html  pdf_reader.html  profile.html  qr_page.html  qr_page_paper.html  register.html  viewer.html
templates/errors/: 400.html  403.html  404.html  413.html  500.html
templates/legal/: data_protection.html  kvkk.html  privacy.html  terms.html
tests/: conftest.py  test_converters.py  test_flows.py  test_security_validation.py  test_storage.py
utils/: security.py
